Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-12-02 (SVN):
    * Updated the COMPILE document regarding DOS builds:  Frank Sapone
      confirmed successful compilation in native DOS/DJGPP environment.
    * Added new ReleaseNotes-1.5.2 document. Only a few entries for now,
      will grow as we move on.  Updated the rpm spec file.

2011-12-02 (SVN):
    * engine/hexenworld/server, model.c: Replaced SV_Error by Host_Error:
      we already have a macro defining Host_Error as SV_Error and this
      reduces the diff size between h2ded and hwsv versions of model.c.

2011-12-02 (SVN):
    * bumped versions for hexen2 engine to 1.25 and hexenworld to 0.25.
    * engine/hexenworld/server: model.c, model.h: Ported dedicated server
      model loader optimizations and cleanups from h2ded to hwsv.

2011-12-02 (SVN):
    * hexenworld: Moved shared/model.h under client and server separately
      so that the two can use customized versions of the header.  Edited
      the server version to remove structures and macros which have never
      been used.

2011-12-02 (SVN):
    * quakedef.h: updated beta date stamp to 2011-12-02.

2011-12-02 (SVN):
    * hexen2 dos port: Made the serial network driver a compile time option.
      Adjusted the use of the NET_USE_SERIAL macro.

2011-12-02 (SVN):
    * Small tidy-up in hexen2 and hexenworld Makefiles.

2011-12-02 (SVN):
    * engine/hexen2/menu.c: Changed some of the obvious if conditions to
      else if. Used the values returned by strlen() as cached in a variable
      when possible.

2011-12-02 (SVN):
    * engine/hexen2/dos/net_comx.c: Made the functions TTY_GetComPortConfig,
      TTY_SetComPortConfig, TTY_GetModemConfig and TTY_SetModemConfig static.

2011-12-01 (SVN):
    * vid_sdl.c (VID_PrepareModes): No need using a different loop counter
      for copying the resolutions list. No need explicitly assigning NULL